compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Shell/content/Models/ForgotPasswordModel.cs.pp
namespace $rootnamespace$.Models
{
    public partial class ForgotPasswordModel
    {
        public string EmailAddress { get; set; }
    }
}